objects/Copado_Rally_Integration__c.object
<CustomObject>
    <fields>
        <fullName>Is_Rally_Sync_Running__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Rally Sync Running</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Sync_Time__c</fullName>
        <label>Last Sync Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Named_Credential__c</fullName>
        <label>Named Credential</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Copado Rally Integration</label>
    <nameField>
        <label>Copado Rally Integration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Copado Rally Integrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>